--- a/Sentient/Base.lproj/Main.storyboard
+++ b/Sentient/Base.lproj/Main.storyboard
@@ -1,25 +1,135 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Start View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SEStartViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Say hello to the future!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GRJ-FE-1md">
+                                <rect key="frame" x="88" y="151" width="239" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="PIS-V5-aBg"/>
+                                    <constraint firstAttribute="width" constant="239" id="dbL-Gr-2Oe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HiraMinProN-W3" family="Hiragino Mincho ProN" pointSize="18"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FOJ-9Z-VcV">
+                                <rect key="frame" x="20" y="526" width="374" height="166"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="374" id="GO3-t1-F3L"/>
+                                    <constraint firstAttribute="height" constant="166" id="Tmp-sz-UCb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Didot-Italic" family="Didot" pointSize="31"/>
+                                <state key="normal" title="Hello...">
+                                    <color key="titleColor" red="0.48850206036291832" green="0.89623873673214427" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="haA-0G-2Wo" kind="show" id="0Es-iq-2cS"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sentient" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2cc-YQ-Czt">
+                                <rect key="frame" x="107" y="61" width="200" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="39M-dN-ykb"/>
+                                    <constraint firstAttribute="width" constant="200" id="66U-pl-LH7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HiraMinProN-W6" family="Hiragino Mincho ProN" pointSize="45"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o9y-qO-WDc">
+                                <rect key="frame" x="-103" y="233" width="604" height="269"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="604" id="lqR-HE-TA6"/>
+                                    <constraint firstAttribute="height" constant="269" id="nbF-83-K1T"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="o9y-qO-WDc" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-0.5" id="5wD-3S-eQS"/>
+                            <constraint firstItem="o9y-qO-WDc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-8" id="Ro6-uJ-JIV"/>
+                            <constraint firstItem="FOJ-9Z-VcV" firstAttribute="top" secondItem="o9y-qO-WDc" secondAttribute="bottom" constant="24" id="YLW-sG-Bsd"/>
+                            <constraint firstItem="GRJ-FE-1md" firstAttribute="top" secondItem="2cc-YQ-Czt" secondAttribute="bottom" constant="45" id="dQl-GP-JEH"/>
+                            <constraint firstItem="FOJ-9Z-VcV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gbv-Jg-VK9"/>
+                            <constraint firstItem="GRJ-FE-1md" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iMT-sB-aR4"/>
+                            <constraint firstItem="2cc-YQ-Czt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ouk-vN-Flz"/>
+                            <constraint firstItem="2cc-YQ-Czt" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="41" id="x7J-Wt-Y8C"/>
+                        </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                    <connections>
+                        <outlet property="gifView" destination="o9y-qO-WDc" id="mwT-TI-832"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="65" y="334"/>
+        </scene>
+        <!--Interactive View Controller-->
+        <scene sceneID="8lf-CV-BhC">
+            <objects>
+                <viewController id="haA-0G-2Wo" customClass="SEInteractiveViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="AEU-z3-DJS"/>
+                        <viewControllerLayoutGuide type="bottom" id="tZk-4S-AEW"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="o4a-HV-SrH">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3CF-L8-F0k">
+                                <rect key="frame" x="59" y="385" width="296" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="2My-6w-Mus"/>
+                                    <constraint firstAttribute="width" constant="296" id="RYm-xl-7sW"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="haA-0G-2Wo" id="Kx3-tD-yO9"/>
+                                </connections>
+                            </textField>
+                            <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="hWF-SD-Wgt">
+                                <rect key="frame" x="40" y="28" width="335" height="267"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="267" id="br6-8F-2dN"/>
+                                    <constraint firstAttribute="width" constant="335" id="urp-UR-eo5"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="hWF-SD-Wgt" firstAttribute="centerX" secondItem="o4a-HV-SrH" secondAttribute="centerX" id="5wh-Oa-kfV"/>
+                            <constraint firstItem="hWF-SD-Wgt" firstAttribute="top" secondItem="AEU-z3-DJS" secondAttribute="bottom" constant="8" id="E5z-ws-I4T"/>
+                            <constraint firstItem="3CF-L8-F0k" firstAttribute="centerX" secondItem="o4a-HV-SrH" secondAttribute="centerX" id="GlY-fS-oja"/>
+                            <constraint firstItem="3CF-L8-F0k" firstAttribute="top" secondItem="hWF-SD-Wgt" secondAttribute="bottom" constant="90" id="frX-DL-biZ"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                    <connections>
+                        <outlet property="heartView" destination="hWF-SD-Wgt" id="kwc-Zh-n1S"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AB7-NL-9ce" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="558" y="334"/>
         </scene>
     </scenes>
 </document>
